--- a/day1/index.html
+++ b/day1/index.html
@@ -6,9 +6,13 @@
 
         <p>Spookey Button</p>
 
-        <button>Click me if you're brave</button>
+        <button onclick=randomFunction()>Click me if you're brave</button>
 
-        <script></script>
+        <script>
+            function randomFunction(){
+                alert("BOO!");
+            }
+        </script>
 
     </body>
 
