Button works with seperate js folder

--- a/day1/index.html
+++ b/day1/index.html
@@ -6,13 +6,9 @@
 
         <p>Spookey Button</p>
 
-        <button onclick=randomFunction()>Click me if you're brave</button>
+        <button onclick='randomFunction();'>Click me if you're brave</button>
 
-        <script>
-            function randomFunction(){
-                alert("BOO!");
-            }
-        </script>
+        <script type='text/javascript' src='script.js'></script>
 
     </body>
 
