--- a/day1/index.html
+++ b/day1/index.html
@@ -1,12 +1,18 @@
 <html>
     <head>
         <title>First Webpage</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
-
-        <p>Spookey Button</p>
-
+    <body class="body">
+        
+        <div>
+            <div class=".left">
+        <h1 class="a">Spookey Button</h1>
+        </div>
+        <div>
         <button onclick='randomFunction();'>Click me if you're brave</button>
+        </div>
+        </div>
 
         <script type='text/javascript' src='script.js'></script>
 
